# RayTracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/RayTracer/: Camera.h  CameraInteraction.h  MainWindow.h  Math.h  Renderer.h  Scene.h  Sphere.h
src/: Camera.cpp  CameraInteraction.cpp  MainWindow.cpp  Renderer.cpp  main.cpp
